增加消息模块

--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
   },
   "tabBar": {
     "color": "#7A7E83",
-    "selectedColor": "#FF0000",
+    "selectedColor": "#318efb",
     "borderStyle": "#3891f8",
     "backgroundColor": "#FFFFFF",
     "list": [
